# Timber

./: .gitignore  Cargo.toml  ideas.txt  package.json
flutter/: temp.txt
src/: cli.rs  config.rs  db.rs  gui.rs  main.rs  models.rs  utils.rs  views.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/commands/: session.rs
timber/: pubspec.yaml
