[package]
name = "timber"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
eframe = "0.32.1"
egui = "0.32.1"
platform-dirs = "0.3.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"
toml = "0.9.4"
tauri = { version = "2.0.0", features = [  "config-json5" ] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true # Strip out all debug symbols
